--- a/.github/workflows/updateMarkdown.yml
+++ b/.github/workflows/updateMarkdown.yml
@@ -3,7 +3,7 @@ on:
   push:
 jobs:
   release:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Run MarkdownSnippets
@@ -15,7 +15,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git commit -m "Doco changes" -a  || echo "nothing to commit"
+        git commit -m ". d mdsnippets" -a  || echo "nothing to commit"
         remote="https://${GITHUB_ACTOR}:${{secrets.GITHUB_TOKEN}}@github.com/${GITHUB_REPOSITORY}.git"
         branch="${GITHUB_REF:11}"
         git push "${remote}" ${branch} || echo "nothing to push"
